--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <h1>Hi Alex!</h1>
     <h2>Merge it2!</h2>
 <select>
-<option value="1">One</option>
+  <option value="1">One</option>
+  <option value="2">Two</option>
 </select>
+
 
 </body>
 </html>
